Fixing image spacing

--- a/assets/linker/css/styles.less
+++ b/assets/linker/css/styles.less
@@ -154,6 +154,7 @@ section.blog-list {
 
             a {
                 img {
+                    max-width: 60%;
                     border-radius: 5px;
                     -webkit-box-shadow: 0 8px 6px -6px #0089d0;
                     -moz-box-shadow: 0 8px 6px -6px #0089d0;
